--- a/app/views/admin/organizations/show.html.haml
+++ b/app/views/admin/organizations/show.html.haml
@@ -234,7 +234,7 @@
             %td
               Bike Search
             %td
-              - if @organization.paid_for?("bike_search")
+              - if @organization.enabled?("bike_search")
                 Yes
               - else
                 %small.less-strong
@@ -291,7 +291,7 @@
             %td
               Stickers
             %td
-              - if @organization.paid_for?("bike_stickers")
+              - if @organization.enabled?("bike_stickers")
                 = link_to "Has stickers", admin_bike_stickers_path(organization_id: @organization.to_param)
               - else
                 %small.less-strong
