--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -49,18 +49,18 @@
                 - on_impound_bikes_path = on_bikes_path && params[:search_impoundedness] == "only_impounded"
                 %li
                   = link_to t(".org_bikes", org_name: passive_organization.short_name), organization_bikes_path(organization_id: passive_organization.to_param), class: "nav-link #{(on_bikes_path && !on_impound_bikes_path) ? 'active' : ''}"
-                - if passive_organization.paid_for?("impound_bikes")
+                - if passive_organization.enabled?("impound_bikes")
                   %li
                     = link_to t(".org_impounded_bikes", org_name: passive_organization.short_name), organization_bikes_path(organization_id: passive_organization.to_param, search_impoundedness: "only_impounded"), class: "nav-link #{on_impound_bikes_path ? 'active' : ''}"
-                - if passive_organization.paid_for?("abandoned_bikes")
+                - if passive_organization.enabled?("abandoned_bikes")
                   %li
                     = active_link t(".org_abandoned_bikes", org_name: passive_organization.short_name), organization_parking_notifications_path(organization_id: passive_organization.to_param), class: "nav-link"
                 %li
                   = active_link t(".add_a_bike"), new_organization_bike_path(passive_organization.to_param), class: "nav-link"
-                - if passive_organization.paid_for?("show_partial_registrations")
+                - if passive_organization.enabled?("show_partial_registrations")
                   %li
                     = active_link t(".incomplete_registrations"), incompletes_organization_bikes_path(passive_organization.to_param), class: "nav-link"
-                - if passive_organization.paid_for?("show_recoveries") # I don't want to show a grayed link for this
+                - if passive_organization.enabled?("show_recoveries") # I don't want to show a grayed link for this
                   %li
                     = active_link t(".recoveries"), recoveries_organization_bikes_path(passive_organization.to_param), class: "nav-link"
 
@@ -70,11 +70,11 @@
                     = active_link bulk_link_name, organization_bulk_imports_path(organization_id: passive_organization.to_param), match_controller: true, class: "nav-link"
                 - if passive_organization.lightspeed_pos?
                   = active_link t(".lightspeed_integration_panel"), lightspeed_interface_path, class: "nav-link"
-                - if passive_organization.paid_for?("bike_stickers")
+                - if passive_organization.enabled?("bike_stickers")
                   %li.divider-nav-item
                   %li
                     = active_link t(".registration_stickers"), organization_stickers_path(organization_id: passive_organization.to_param), match_controller: true, class: "nav-link"
-                - if passive_organization.paid_for?("csv_exports")
+                - if passive_organization.enabled?("csv_exports")
                   %li
                     = active_link t(".exports"), organization_exports_path(organization_id: passive_organization.to_param), match_controller: true, class: "nav-link"
                 - if passive_organization.message_kinds.any?
