--- a/app/views/organized/parking_notifications/index.html.haml
+++ b/app/views/organized/parking_notifications/index.html.haml
@@ -6,7 +6,7 @@
 
 .organized-records
   .text-right.mb-4
-    = link_to "Record unregistered abandoned bike", new_organization_bike_path(organization_id: current_organization, kind: "abandoned"), class: "btn btn-sm btn-outline-primary"
+    = link_to "Parking notification for unregistered bike", new_organization_bike_path(organization_id: current_organization, kind: "abandoned"), class: "btn btn-sm btn-outline-primary"
 
   #map
 
