--- a/app/views/bikes/_organized_access_panel.html.haml
+++ b/app/views/bikes/_organized_access_panel.html.haml
@@ -192,7 +192,7 @@
       Parking notifications
 
     - if parking_notifications.any?
-      = render partial: "/organized/parking_notifications/table", locals: { parking_notifications: parking_notifications.limit(4), skip_bike: true, skip_map_cell: true, organization: passive_organization }
+      = render partial: "/organized/parking_notifications/table", locals: { parking_notifications: parking_notifications.limit(4), skip_bike: true, skip_map_cell: true, render_address: true }
 
       %p{ style: "margin-top: -12px;" }
         = pluralize number_with_delimiter(parking_notifications.count), "total notification"
@@ -229,8 +229,7 @@
                 First notice
               %label.btn.btn-secondary{ class: (@parking_notification.is_repeat ? "active" : ""), disabled: !@parking_notification.can_be_repeat? }
                 = f.radio_button :is_repeat, true
-                Repeat of
-                = pluralize @parking_notification.earlier_bike_notifications.count, "earlier notification"
+                Repeat ##{@parking_notification.repeat_number} of earlier notification
 
         .row.mt-4
           .col-md-6
@@ -263,11 +262,6 @@
                   Enter address manually
 
             .address-fields.related-fields.collapse
-              .form-group.fancy-select.unfancy.ifManualRequired#us_id_data{ data: { usid: Country.united_states.id } }
-                = f.select(:country_id, Country.select_options,
-                  { prompt: t(".choose_country") },
-                  { class: 'country-select-input form-control' } )
-
               .form-group.ifManualRequired
                 = f.text_field :street, placeholder: t(".address_or_intersection"), class: "form-control"
 
@@ -279,6 +273,10 @@
 
               .form-group.fancy-select-placeholder.unfancy.hidden-other{ class: (@parking_notification.country_id == Country.united_states.id ? "unhidden" : "") }
                 = f.collection_select(:state_id, State.all, :id, :name, { include_blank: true, prompt: t(".state") }, { class: "form-control" })
+              .form-group.fancy-select.unfancy.ifManualRequired#us_id_data{ data: { usid: Country.united_states.id } }
+                = f.select(:country_id, Country.select_options,
+                  { prompt: t(".choose_country") },
+                  { class: 'country-select-input form-control' } )
           .col-md-6
             .form-group.less-strong
               = f.label :internal_notes, t(".parking_notification_notes_html", org_name: passive_organization.short_name)
